--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -2,7 +2,6 @@
     background-color: #efefef;
     padding: 2em;
     text-align: center;
-    height: 40em;
 }
 
 .cont1 {
@@ -22,55 +21,53 @@
 form {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    max-width: 730px;
-    margin: auto;
+    border: 1px solid #52525233;
+    padding: 20px;
+    color: #434343;
+    max-width: 400px;
+    width: 100%;
+    border-radius: 6px;
+    
 }
 
-.cont2 {
-    display: flex;
-    gap: 8%;
-    margin-bottom: 1em;
-    max-width: 705px;
 
-}
 
 label {
-    font-weight: bold;
+    margin-bottom: 10px;
+    font-size: 0.83em;
 }
 
 .cont3 {
+    display: flex;
+    flex-direction: column;
     width: 100%;
+    text-align: left;
+    margin-bottom: 20px;
 }
 
 input {
-    width: 100%;
     padding: 1em ;
-    border-radius: 10px;
-    border: 1px solid #454545;
-    background-color: #efefef;
-    color: #454545;
+    border-radius: 6px;
+    border: 1px solid #B2B0B0;
+    background-color: #FFFEFE;
+    color: #B2B2B2;
+}
+
+textarea {
+    padding: 1em 2.5em 5em 1.5em ;
+    border-radius: 6px;
+    font-family: sans-serif;
+    font-size: 15px;
+    border: 1px solid #B2B0B0;
+    background-color: #FFFEFE;
+    color: #B2B2B2;
+    max-width: 350px;
 }
 
 input::placeholder, textarea::placeholder {
     color: #454545;
 }
 
-
-textarea {
-    width: 100%;
-    max-width: 705px;
-    height: 200px;
-    padding: 1em;
-    border-radius: 10px;
-    border: 1px solid #454545;
-    background-color: #efefef;
-    color: #454545;
-}
-
-.cont4 {
-    width: 100%;
-}
 
 textarea:hover,
 input:hover {
@@ -80,12 +77,13 @@ input:hover {
 
 form button {
     background-color: #2F4157;
-    padding: 1em;
+    padding: 15px 1em;
     color: white;
-    border-radius: 10px;
+    border-radius: 6px;
     border: none;
     cursor: pointer;
     width: 100%;
+    font-size: 16px;
 }
 
 .cont5 {
@@ -97,6 +95,44 @@ form button:hover {
     background-color: #485A70;
 }
   
+.card {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    padding: 10px 30px;
+    border: 1px solid #52525233;
+    border-radius: 10px;
+    max-width: 320px;
+    width: 100%;
+}
+
+.card p {
+    margin: 5px 0 30px 0;
+}
+
+.card h2 {
+    margin-bottom: 8px;
+}
+
+.card1 {
+    display: flex;
+    margin-bottom: 25px;
+    gap: 15px;
+    text-align: center;
+    align-items: center;
+}
+
+.card1 img {
+    width: 25px;
+    height: 25px;
+}
+
+.card2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
 
 
 @media (max-width: 768px) {
@@ -122,5 +158,13 @@ form button:hover {
 
     textarea {
         max-width: 92%;
+    }
+
+    .card2 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 50px;
     }
 }
