--- a/src/components/socials.css
+++ b/src/components/socials.css
@@ -43,7 +43,13 @@
     width: 20px;
     height: 20px;
     margin: 4px;
+    margin-right: 10px;
+}
 
+.soc3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .soc1 img {
