--- a/src/components/pictures.css
+++ b/src/components/pictures.css
@@ -5,7 +5,6 @@
     justify-content: center;
     text-align: center;
     background-color: #EFEFEE;
-    margin: 0;
     padding: 2em ;
 }
 
@@ -18,10 +17,12 @@
     grid-template-columns: repeat(4, minmax(150px, 1fr));
     gap: 10px;
     padding: 16px;
-       
+    
 }
   
-.pic1 img {
+.pic1img {
+    max-width: 150px; 
+    max-height: 116px;
     width: 100%; 
     height: 100%; 
     object-fit: cover; 
