--- a/src/components/explore.css
+++ b/src/components/explore.css
@@ -47,6 +47,7 @@
     transform: translateY(-50%); 
     width: 24px;
     height: 24px;
+    background: #FEC938;
 }
 
 .chevron-next {
@@ -56,6 +57,7 @@
     transform: translateY(-50%); 
     width: 24px;
     height: 24px;
+    background: #FEC938;
 }
 
 
@@ -64,7 +66,15 @@
     max-width: 750px;
     max-height: 350px;
     height: 100%;
+    border: 2px solid #E0E0DF;
     border-radius: 13px;
+}
+
+.rec img {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    border: 1px solid #E0E0DF;
 }
 
 .explo4 {
@@ -82,7 +92,7 @@
 }
   
 .explo5.active {
-    border: 2px solid #007bff; 
+    border: 2px solid #FEC938; 
 }
   
 
@@ -90,6 +100,7 @@
     width: 100%;
     height: 100%;
     border-radius: 5px;
+    border: 1px solid #E0E0DF;
 }
 
 .explo6 {
