--- a/src/components/services.css
+++ b/src/components/services.css
@@ -2,20 +2,23 @@
     text-align: center;
     padding: 3rem 5rem;
     padding-bottom: 0rem;
+    background-color: #FBFBFB;
 }
 
 .services h3 {
-  margin-bottom: 0;
+  margin-bottom: 3rem;
 }
 
 .ser {
     display: grid;
-    grid-template-columns: repeat(4, minmax(220px, 1fr)); 
-    gap: 3rem; 
-    justify-items: start; 
+    grid-template-columns: repeat(2, minmax(200px, 1fr)); 
+    gap: 1rem 6rem; 
+    justify-items: center; 
     padding: 2rem 1em;
     padding-bottom: 3rem;
     border-bottom: 1.5px solid #E0E0DF;
+    max-width: 1000px;
+    margin: auto;
 }
 
 .ser2 {
@@ -40,102 +43,82 @@
 
 
 .Project {
-  padding: 4rem 7rem;
+  padding: 4rem;
   justify-content: center;
   align-items: center;
 }
+
+
   
-  .pro1 {
+ 
+  .beli {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    text-align: start;
     justify-content: center;
-    padding: 20px;
-    border-radius: 10px;
-    margin: 2rem;
-  }
-
-  .pro2 {
-    width: 50%;
-  } 
-
-  
-
-  .pro1 img {
-    width: 100%;
-    height: 100%;
-  }
-
-  .img {
-    margin-right: 4rem;
-    max-width: 500px; 
-    max-height: 35vh;
-  }
-  
-  .data {
-    max-width: 30px; 
-    height: 8vh;
-    margin-bottom: 5px;
+    align-items: center;
+    gap: 15px;
   }
 
   .ser2 h5 {
     margin: 0;
   }
   
-  .pro1 button {
-    display: flex;
-    border: 1px solid #2F4157;
-    border-radius: 10px;
-    padding: 14px 35px;
-    color: #2F4157;
-    font-size: 12px;
-    margin: 15px 0;
-    cursor: pointer;
-    background-color: #ffffff;
+ .again5 {
+  display: flex;
+  justify-content: center;
+  gap: 3%;
+  margin: auto;
+ }
+
+ .again2 {
+  max-width: 285px;
+  max-height: 196px;
+
+ }
+
+ .again2 img {
+  width: 100%;
+  height: 100%;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  border: 1px solid #EFEFEF;
+ }
+
+ .again5 h5 {
+  margin-bottom: 0;
+ }
+
+ .again1 {
+  max-width: 400px;
+  border: 1px solid #D9D9D9;
+  background-color: #FFFFFF;
+  border-radius: 10px;
+  padding: 20px;
+  text-align: start;
+  margin-bottom: 5rem;
+ }
+
+ .again1 span {
+  text-decoration: underline;
+  font-size: 13px;
+  color: #2F4157;
 }
 
-.pro1 button:hover {
-    color: #efefef;
-    background-color: #2F4157;
-}
-  
-  .swiper-button-prev, .swiper-button-next {
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: #2f4157;
-    color: white;
-    padding: 10px;
-    cursor: pointer;
-    font-size: 18px;
-    border-radius: 50%;
-    z-index: 10;
-  }
-  
-  .pro {
-    display: block;
-    position: relative;
-    width: 100%;
-    height: auto; 
+.again1 span a,
+.again6 span a {
+  text-decoration: none;
+  color: #2F4157;
 }
 
-.button-prev {
-    position: absolute;
-    left: -8rem;
-    top: 50%;
-    transform: translateY(-50%); 
+.again6 span {
+  text-decoration: underline;
 }
 
-.button-next {
-    position: absolute;
-    right: -8rem; 
-    top: 50%;
-    transform: translateY(-50%); 
-}
-
-  .pro2 h3 {
-    margin-top: 0;
-  }
+ .again3 {
+  max-width: 285px;
+  text-align: start;
+  max-height: 300px;
+  height: 150px;
+ }
   
   
   
@@ -150,35 +133,7 @@
       padding: 3rem;
   }
 
-  .pro2 {
-    width: 100%;
-  } 
-
-  .pro1 {
-    flex-direction: row;
-    justify-content: center;
-    padding: 10px;
-    border-radius: 10px;
-    margin: 1rem;
-  }
-
-  .Project {
-    padding: 4rem 2rem;
-  }
-
-  .button-prev {
-    position: absolute;
-    left: -4rem;
-    top: 50%;
-    transform: translateY(-50%); 
-}
-
-.button-next {
-    position: absolute;
-    right: -4rem; 
-    top: 50%;
-    transform: translateY(-50%); 
-}
+  
 }
 
 @media (max-width: 768px) {
@@ -201,43 +156,15 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
   }
 
-  .pro2 {
-    width: 100%;
-  } 
-
-  .pro1 {
-    flex-direction: column;
-    justify-content: center;
-    padding: 10px;
-    border-radius: 10px;
-    margin: 1rem ;
-  }
+  
 
   .Project {
     padding: 4rem 0;
   }
 
-  .img {
-    margin-right: 0;
-    max-width: 500px; 
-    height: 20vh;
+  .again5 {
+    flex-wrap: wrap;
   }
 
-  .button-prev {
-    position: absolute;
-    left: 0.1rem;
-    top: 50%;
-    transform: translateY(-50%); 
-}
-
-.button-next {
-    position: absolute;
-    right: 0.1rem; 
-    top: 50%;
-    transform: translateY(-50%); 
-}
-
-.pro2 h3 {
-  margin-top: 16px;
-}
+  
 }
