--- a/src/components/landingPage.css
+++ b/src/components/landingPage.css
@@ -97,6 +97,13 @@
     font-size: 12px;
     margin: 15px 0;
     cursor: pointer;
+    color: #454545;
+        text-decoration: none;
+}
+
+.intro  a {
+    color: #454545;
+    text-decoration: none;
 }
 
 .intro button:hover {
