--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -6,10 +6,12 @@
         color: #454545;
         padding:  10px 50px;
         border-bottom: 1px solid #E0E0DF;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        position: relative;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.02);
+        position: fixed;
         top: 0;
         left: 0;
+        width: 100%;
+        box-sizing: border-box; 
         transition: 0.5s;
         z-index: 10000;
     }
@@ -91,7 +93,7 @@
       width: 30px;
     }
 
-   
+    
 
   @media (max-width: 768px) {
 
@@ -99,6 +101,7 @@
       display: flex;
       align-items: center;
       padding: 10px 20px;
+      
     }
   
     .dav2 {
