--- a/src/components/services.css
+++ b/src/components/services.css
@@ -116,8 +116,7 @@
  .again3 {
   max-width: 285px;
   text-align: start;
-  max-height: 300px;
-  height: 150px;
+  
  }
   
   
@@ -133,20 +132,22 @@
       padding: 3rem;
   }
 
-  
+  .again5 {
+    flex-wrap: wrap;
+  }
 }
 
 @media (max-width: 768px) {
   .ser {
       grid-template-columns: repeat(1, minmax(40px, 1fr));
-          padding: 4rem 1rem;
+          padding: 0rem 1rem 2rem 1rem;
           gap: 0.5rem;
           margin: 3px;
 
   }
   .services {
     text-align: center;
-    padding: 3rem 0;
+    padding: 2rem 0;
   }
 
   .ser2 {
@@ -159,12 +160,15 @@
   
 
   .Project {
-    padding: 4rem 0;
+    padding: 2rem 0 0 0;
   }
 
   .again5 {
     flex-wrap: wrap;
   }
 
+  .services h3 {
+    margin-bottom: 2rem;
+}
   
 }
