--- a/src/components/explore.css
+++ b/src/components/explore.css
@@ -47,7 +47,6 @@
     transform: translateY(-50%); 
     width: 24px;
     height: 24px;
-    background: #FEC938;
 }
 
 .chevron-next {
@@ -57,14 +56,13 @@
     transform: translateY(-50%); 
     width: 24px;
     height: 24px;
-    background: #FEC938;
 }
 
 
 .rec {
     width: 100%;
-    max-width: 750px;
-    max-height: 350px;
+    max-width: 500px;
+    max-height: 300px;
     height: 100%;
     border: 2px solid #E0E0DF;
     border-radius: 13px;
@@ -73,6 +71,8 @@
 .rec img {
     width: 100%;
     height: 100%;
+    max-width: 500px;
+    max-height: 290px;
     border-radius: 5px;
     border: 1px solid #E0E0DF;
 }
@@ -92,7 +92,7 @@
 }
   
 .explo5.active {
-    border: 2px solid #FEC938; 
+    border: 2px solid #2F4157; 
 }
   
 
@@ -100,7 +100,6 @@
     width: 100%;
     height: 100%;
     border-radius: 5px;
-    border: 1px solid #E0E0DF;
 }
 
 .explo6 {
@@ -153,6 +152,10 @@
 
 
 @media (max-width: 1200px) {
+    .rec {
+        max-width: 400px;
+    }
+
     .explo {
         padding: 1rem 8%;
     }
@@ -160,9 +163,18 @@
     .explo3 {
         height: 25vh;
     }
+
+    .chevron-prev,
+    .chevron-next {
+        display: none;
+    }
 }
 
 @media (max-width: 768px) {
+    .rec {
+        max-height: 200px;
+    }
+
     .explo {
         padding: 1rem 4%;
     }
@@ -183,7 +195,7 @@
     }
 
     .explo3 {
-        height: 35vh;
+        height: 25vh;
     }
 
     .chevron-prev {
