--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -11,6 +11,7 @@
         top: 0;
         left: 0;
         width: 100%;
+        max-width: 100vw;
         box-sizing: border-box; 
         transition: 0.5s;
         z-index: 10000;
