--- a/src/components/resume.css
+++ b/src/components/resume.css
@@ -123,7 +123,7 @@
     .small1 {
         display: flex;
         justify-content: space-between;
-        align-items: center;
+        align-items: end;
     }
 
     .name1 img{
