--- a/src/components/socials.css
+++ b/src/components/socials.css
@@ -5,6 +5,7 @@
     padding: 5rem 0;
     background-color: #2F4157;
     position: relative;
+
 }
 
 .prev {
@@ -24,7 +25,7 @@
 
 .soc button {
     border: 1px solid #EFEFEE;
-    border-radius: 10px;
+    border-radius: 5px;
     padding: 15px 70px;
     color: #EFEFEE;
     font-size: 12px;
@@ -50,6 +51,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.soc3 img {
+    margin-top: 4px;
+
 }
 
 .soc1 img {
@@ -84,5 +90,25 @@
         width: 100px;
 
     }
+
+    .soc h3 {
+        width: 250px;
+    }
+
+    .soc {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        color: #EFEFEE;
+        padding: 4rem 1rem;
+        background-color: #2F4157;
+        position: relative;
+        justify-content: center;
+        
+    }
     
+    .soc1 {
+        margin-top: 2rem;
+    }
 }
